# wicked-garden

./: .aider.chat.history.md  .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  ETHOS.md  QE_PLAN_WICKED_AGENTIC.md  README.md  RELEASE-1.1.0.md  RELEASE-1.10.0.md  RELEASE-1.10.1.md  RELEASE-1.11.0.md  RELEASE-1.11.2.md  RELEASE-1.12.0.md  RELEASE-1.12.1.md  RELEASE-1.14.0.md  RELEASE-1.15.0.md  RELEASE-1.2.0.md  RELEASE-1.2.1.md  RELEASE-1.3.0.md  RELEASE-1.3.1.md  RELEASE-1.3.2.md  RELEASE-1.3.3.md  RELEASE-1.5.2.md  RELEASE-1.6.0.md  RELEASE-1.6.1.md  RELEASE-1.6.2.md  RELEASE-1.7.0.md  RELEASE-1.7.1.md  RELEASE-1.8.0.md  RELEASE-1.9.0.md  WG-TEST-REPORT-2026-02-23.md  WICKED_GARDEN_BUS_EVENTS.md  install.mjs  package-lock.json  package.json  pyproject.toml  test-strategy-unified-search.md  test-strategy.md  (+1 more)
.claude/: CLAUDE.md  settings.json
.claude-plugin/: archetypes.json  autonomy-policy.json  autonomy-policy.schema.json  components.json  finding-classification.json  gate-policy.json  marketplace.json  phases.json  plugin.json  specialist.json  stack-registry.json
.codegraph-extractors/: archetype.mjs
.githooks/: pre-push
.product/: DES-001-technical-design.md  RAID.md  REQ-001-application-overview.md  REQ-002-technology-constraints.md  REQ-003-domain-model.md  REQ-004-ways-of-working.md  REQ-005-dod-criteria.md  TEST-001-test-strategy.md
commands/: _aliases.md  aliases.md  compile.md  deliberate.md  help.md  install.md  intent.md  prove.md  report-issue.md  reset.md  resolve.md  setup.md  where-am-i.md
daemon/: ARCHITECTURE.md  __init__.py  _internal.py  consumer.py  council.py  db.py  hook_dispatch.py  projector.py  server.py  test_dispatch.py
docs/: MIGRATION-v7.md  README.md  spc.md  (+14 more)
plugins/wicked-kanban/: CHANGELOG.md  LICENSE  README.md  RELEASE-0.10.0.md  RELEASE-0.10.1.md  RELEASE-0.11.0.md  RELEASE-0.12.0.md  RELEASE-0.5.1.md  RELEASE-0.6.0.md  RELEASE-0.7.0.md  RELEASE-0.8.0.md  RELEASE-0.9.0.md  RELEASE-1.0.0.md  RELEASE-1.1.0.md  RELEASE-1.2.0.md  RELEASE-1.2.1.md  pyproject.toml  pytest.ini  wicked.json
plugins/wicked-kanban/.claude-plugin/: catalog.json  plugin.json  ui-manifest.json
plugins/wicked-kanban/commands/: board-status.md  comment.md  help.md  name-session.md  new-task.md  start-api.md
plugins/wicked-kanban/docs/: API.md
plugins/wicked-kanban/hooks/: hooks.json
plugins/wicked-kanban/hooks/scripts/: activity_tracker.py  lifecycle_enricher.py  run_python.sh  session_start.py  stop.py  task_completed.py  todo_sync.py
plugins/wicked-kanban/scenarios/: README.md  initiative-planning.md  priority-triage.md  search-and-discovery.md
plugins/wicked-kanban/scripts/: api.py  kanban.py  kanban_initiative.py
plugins/wicked-kanban/skills/task-management/: SKILL.md
plugins/wicked-kanban/skills/task-management/references/: api-reference.md
plugins/wicked-kanban/tests/: README.md  __init__.py  test_task_blocking_status.py
plugins/wicked-search/scripts/: accuracy_validator.py  api.py  external_indexer.py  ignore_handler.py  linker.py  migration.py  pyproject.toml  query_builder.py  query_loader.py  service_detector.py  symbol_graph.py  test_external_http.py  unified_search.py  updater.py
plugins/wicked-search/scripts/adapters/: __init__.py  csharp_adapter.py  js_adapter.py  ruby_adapter.py  utils.py  vue_adapter.py  xml_adapter.py
plugins/wicked-search/scripts/linkers/csharp/: __init__.py  orm_linker.py
plugins/wicked-search/scripts/linkers/frontend/: frontend_resolver.py
plugins/wicked-search/scripts/linkers/go/: __init__.py
plugins/wicked-search/scripts/linkers/jsp/: form_binding_linker.py
plugins/wicked-search/scripts/linkers/python/: orm_linker.py
plugins/wicked-search/scripts/linkers/ruby/: __init__.py  orm_linker.py
plugins/wicked-search/scripts/linkers/typescript/: __init__.py
plugins/wicked-search/scripts/parsers/: base.py
plugins/wicked-search/scripts/queries/: ada.scm  apex.scm  arduino.scm  asm.scm  bash.scm  c.scm  cmake.scm  commonlisp.scm  cpp.scm  cuda.scm  d.scm  dart.scm  dockerfile.scm  elixir.scm  elm.scm  fortran.scm  fsharp.scm  generic.scm  gleam.scm  go.scm  groovy.scm  haskell.scm  hcl.scm  javascript.scm  julia.scm  kotlin.scm  lua.scm  make.scm  matlab.scm  nim.scm  nix.scm  objc.scm  ocaml.scm  ocaml_interface.scm  php.scm  pony.scm  properties.scm  python.scm  r.scm  racket.scm  (+13 more)
plugins/wicked-workbench/server/: .env.example  README.md  pyproject.toml  wicked_workbench.db
plugins/wicked-workbench/server/frontend/: index.html  package-lock.json  package.json  vite.config.ts
plugins/wicked-workbench/server/frontend/src/: App.tsx  index.css
plugins/wicked-workbench/server/frontend/src/components/: AgentProgress.tsx  ChatPanel.tsx  ComponentRenderer.tsx  Layout.tsx  PluginNav.tsx  PluginView.tsx
plugins/wicked-workbench/server/frontend/src/components/primitives/: Badge.tsx  Card.tsx  ProgressBar.tsx  StatCard.tsx  Table.tsx  index.ts
plugins/wicked-workbench/server/frontend/src/hooks/: useACP.ts  usePlugins.ts
plugins/wicked-workbench/server/frontend/src/stores/: acpStore.ts  pluginStore.ts
plugins/wicked-workbench/server/frontend/src/types/: a2ui.ts  acp.ts  plugin.ts
plugins/wicked-workbench/server/scripts/: init_auth_db.py
plugins/wicked-workbench/server/src/wicked_workbench_server/: __init__.py  __main__.py  app.py  catalog_loader.py  prompt_generator.py
plugins/wicked-workbench/server/src/wicked_workbench_server/acp/: __init__.py  acp_bridge.py  acp_manager.py  routes.py
plugins/wicked-workbench/server/src/wicked_workbench_server/auth/: README.md  __init__.py  config.py  database.py  middleware.py  models.py  oauth.py  password.py  routes.py  tokens.py
plugins/wicked-workbench/server/src/wicked_workbench_server/bridges/: __init__.py  claude_client.py  mcp_bridge.py
plugins/wicked-workbench/server/src/wicked_workbench_server/data_gateway/: __init__.py  discovery.py  models.py  router.py
plugins/wicked-workbench/server/src/wicked_workbench_server/render/: __init__.py  router.py  surfaces.py
plugins/wicked-workbench/server/tests/: test_auth.py
(+3281 files in other folders)
