[project]
name = "wicked-garden"
version = "1.33.0"
description = "AI-Native SDLC delivered as a single Claude Code plugin"
requires-python = ">=3.10"
dependencies = [
    "rapidfuzz>=3.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-language-pack",
    "aiofiles>=23.0",
    "pydantic>=2.0",
    "pathspec>=0.11.0",
    "lxml>=4.9.0",
    "pyyaml>=6.0",
    "kreuzberg>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Not a distributable package — this pyproject.toml exists so uv can manage deps
packages = ["scripts"]

[tool.uv]
# uv resolves from repo root so all `cd $PLUGIN_ROOT && uv run python ...` invocations work
