[project]
name = "wicked-garden"
version = "1.33.0"
description = "AI-Native SDLC delivered as a single Claude Code plugin"
requires-python = ">=3.10"
dependencies = [
    "rapidfuzz>=3.0",
    "aiofiles>=23.0",
    "pydantic>=2.0",
    "pathspec>=0.11.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "hypothesis>=6.100",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Not a distributable package — this pyproject.toml exists so uv can manage deps
packages = ["scripts"]

[tool.uv]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "hypothesis>=6.100",
]
# uv resolves from repo root so all `cd $PLUGIN_ROOT && uv run python ...` invocations work

# Hypothesis config (design-addendum-1 D-8):
#   derandomize=true keeps PR CI deterministic per T1 (determinism).
#   Nightly 10K-iter jobs can override with --hypothesis-seed=random.
[tool.hypothesis]
database_file = ".hypothesis/examples"
deadline = 1000
verbosity = "normal"
derandomize = true
