[project]
name = "wicked-kanban"
version = "0.2.0"
description = "AI-native kanban - source of truth for task management in Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Mike Parcewski" }
]
keywords = ["kanban", "task-management", "claude-code", "plugin"]

dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
