[project]
name = "wicked-search"
version = "1.0.0"
description = "Unified code and document search with cross-reference detection. Enhanced JSP/EL and frontend framework support."
requires-python = ">=3.10"
dependencies = [
    "rapidfuzz>=3.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-language-pack",
    "aiofiles>=23.0",
    "pydantic>=2.0",
    "pathspec>=0.11.0",
    "lxml>=4.9.0",
    "pyyaml>=6.0",
    "kreuzberg>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "unified_search.py",
    "query_loader.py",
    "ignore_handler.py",
    "symbol_graph.py",
    "lineage_tracer.py",
    "service_detector.py",
    "coverage_reporter.py",
    "queries",
    "parsers",
    "linkers",
]

[tool.hatch.build.targets.sdist]
only-include = [
    "unified_search.py",
    "query_loader.py",
    "ignore_handler.py",
    "symbol_graph.py",
    "queries",
    "parsers",
    "linkers",
    "pyproject.toml",
]
