[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wicked-workbench-server"
version = "0.2.0"
description = "A2UI dashboard renderer for wicked-garden plugins"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mike Parcewski", email = "wicked@example.com" }
]
keywords = ["dashboard", "a2ui", "claude", "mcp", "workbench"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic[email]>=2.0.0",
    "jinja2>=3.1.0",
    "authlib>=1.3.0",
    "sqlalchemy>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.6",
    "itsdangerous>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
wicked-workbench = "wicked_workbench_server:main"

[project.urls]
Homepage = "https://github.com/mikeparcewski/wicked-garden"
Repository = "https://github.com/mikeparcewski/wicked-garden"

[tool.hatch.build.targets.wheel]
packages = ["src/wicked_workbench_server"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
